Expandindo quase em tela cheia. Falta adicionar dock com botões de play

--- a/ide/src/main/java/br/univali/ps/ui/paineis/NewPainelTabulado.form
+++ b/ide/src/main/java/br/univali/ps/ui/paineis/NewPainelTabulado.form
@@ -16,7 +16,7 @@
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="jPanel1">
+    <Container class="javax.swing.JPanel" name="cabecalhosContainer">
       <Properties>
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
